--- a/DesainWeb.html
+++ b/DesainWeb.html
@@ -200,13 +200,13 @@
                         <div class="row">
                            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 padding_right0">
                               <ul class="easy">
-                                 <li class="active"><a href="#">Vision</a></li>
+                                 <li class="active"><a href="#">Courses</a></li>
                               </ul>
                            </div>
                            <div class="col-xl-9 col-lg-9 col-md-9 col-sm-12 padding_left0">
                               <div class="choose_box">
                                  <i><img src="Group.png" alt="#"/></i>
-                                 <h3> Visi </h3>
+                                 <h3> Course </h3>
                                  <p>Mewujudkan masyarakat indonesia yang unggul dan berpendidikan melalui terciptanya platform EduMile </p>
                               </div>
                            </div>
