--- a/DesainWeb.html
+++ b/DesainWeb.html
@@ -188,7 +188,7 @@
                <div class="row">
                   <div class="col-md-12">
                      <div class="titlepage">
-                        <h2>Visi<span class="blu"> EduMile</span></h2>
+                        <h2>Courses<span class="blu"> EduMile</span></h2>
                      </div>
                   </div>
                </div>
