--- a/DesainWeb.html
+++ b/DesainWeb.html
@@ -207,7 +207,7 @@
                               <div class="choose_box">
                                  <i><img src="Group.png" alt="#"/></i>
                                  <h3> Course </h3>
-                                 <p>Mewujudkan masyarakat indonesia yang unggul dan berpendidikan melalui terciptanya platform EduMile </p>
+                                 <p>On Going : Sistem Pencernaan, IPA,  Kelas 6, Sekolah Dasar, Mulai 17.00-18.00 WIB </p>
                               </div>
                            </div>
                         </div>
