--- a/DesainWeb.html
+++ b/DesainWeb.html
@@ -205,7 +205,7 @@
                            </div>
                            <div class="col-xl-9 col-lg-9 col-md-9 col-sm-12 padding_left0">
                               <div class="choose_box">
-                                 <i><img src="Group.png" alt="#"/></i>
+                                 <i><img src="Random.png" alt="#"/></i>
                                  <h3> Course </h3>
                                  <p>On Going : Sistem Pencernaan, IPA,  Kelas 6, Sekolah Dasar, Mulai 17.00-18.00 WIB </p>
                               </div>
